--- a/backend-api-cdk/.gitignore
+++ b/backend-api-cdk/.gitignore
@@ -17,7 +17,7 @@ yarn-error.log*
 lerna-debug.log*
 
 # Mac files
-.DS_Store
+*.DS_Store
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
