--- a/backend-api-cdk/package.json
+++ b/backend-api-cdk/package.json
@@ -14,7 +14,7 @@
     "@aws-cdk/assert": "1.88.0",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
-    "aws-cdk": "1.88.0",
+    "aws-cdk": "1.178.0",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
     "ts-node": "^9.0.0",
@@ -22,9 +22,10 @@
   },
   "dependencies": {
     "@aws-cdk/aws-ec2": "^1.178.0",
+    "@aws-cdk/aws-ecs": "^1.178.0",
     "@aws-cdk/aws-iam": "^1.178.0",
     "@aws-cdk/aws-s3": "^1.178.0",
-    "@aws-cdk/core": "1.88.0",
+    "@aws-cdk/core": "1.178.0",
     "source-map-support": "^0.5.16"
   }
 }
